ghc-4335c07/testsuite/tests/typecheck/should_fail/T10534.hs
{-# LANGUAGE TypeFamilies #-}

module T10534 where

import T10534a

newtype instance DF a = MkDF ()

unsafeCoerce :: a -> b
unsafeCoerce = silly
